syntax = "proto3";

option java_multiple_files = true;

package chatapp;

message ChatMessage {
  string from = 1;
  string message = 2;
}

message ChatMessageFromServer {
  ChatMessage message = 1;
}

service ChatService {
  rpc chat (stream ChatMessage) returns (stream ChatMessageFromServer);
}